[gd_scene load_steps=2 format=3 uid="uid://dakpr1r6g7jp8"]

[ext_resource type="Script" uid="uid://di1y0wc6rwbb4" path="res://scripts/SplashScreen.gd" id="1_wxot6"]

[node name="SplashScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wxot6")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.184, 0.106, 0.078, 1)

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="LogoContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="LogoLabel" type="Label" parent="MainContainer/LogoContainer"]
layout_mode = 2
text = "üç∫ BAR-SIK"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="MainContainer/LogoContainer"]
layout_mode = 2
text = "Idle Bar Management"
horizontal_alignment = 1

[node name="VersionLabel" type="Label" parent="MainContainer/LogoContainer"]
layout_mode = 2
text = "v0.3.0"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="MainContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)

[node name="LoadingContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="LoadingLabel" type="Label" parent="MainContainer/LoadingContainer"]
layout_mode = 2
text = "Cargando..."
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="MainContainer/LoadingContainer"]
layout_mode = 2
custom_minimum_size = Vector2(300, 20)
value = 0.0
show_percentage = false

[node name="LoadingTip" type="Label" parent="MainContainer/LoadingContainer"]
layout_mode = 2
text = "üí° Prepara tu bar para los clientes..."
horizontal_alignment = 1
